@@ -1,3 +1,10 @@
+2008-09-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* dw2gencfi.c (CFI_DIFF_EXPR_OK): Define if not defined.
+	(dot_cfi_personality): Use CFI_DIFF_EXPR_OK instead of DIFF_EXPR_OK.
+	(dot_cfi_lsda, output_cie, output_fde): Likewise.
+	* config/tc-hppa.h (CFI_DIFF_EXPR_OK): Define.
+
 2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* config/tc-mips.h (DWARF2_FDE_RELOC_SIZE): Define.
